# le3-empty-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
resources/: empty.txt
